pop-up feedback message using SweetAlert2

--- a/index.html
+++ b/index.html
@@ -54,5 +54,7 @@
         </section>
     </main>
 <script src="index.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </body>
 </html>
